fix(admin-ui):  logs shield z-index fixed.

--- a/admin-ui/src/styles/_variables.scss
+++ b/admin-ui/src/styles/_variables.scss
@@ -24,7 +24,7 @@ $logs-height: 22px;
 
 $z-index-modal: 99999;
 $z-index-notifications: 99999;
-$z-index-logs: 9;
+$z-index-logs: 1000;
 
 $status-up: UP;
 $status-down: DOWN;
